--- a/style/style.css
+++ b/style/style.css
@@ -93,3 +93,19 @@ h6 {
     font-size: inherit;
     font-weight: 400;
 }
+/************pc version***************/
+.main__wrapper {
+}
+.content__wrapper {
+}
+.content__language__block {
+}
+.main__content__block {
+}
+.footer__social__block {
+}
+.footer__social__wrapper {
+}
+.footer__social__img {
+}
+/**************768 px version********************/
