--- a/style/style.css
+++ b/style/style.css
@@ -93,19 +93,52 @@ h6 {
     font-size: inherit;
     font-weight: 400;
 }
-/************pc version***************/
+/****||*******pc version*****\\\\\\\\*********/
+/****||*******pc version*****\\\\\\\\*********/
+/****||*******pc version*****\\\\\\\\*********/
+/****||*******pc version*****\\\\\\\\*********/
 .main__wrapper {
+    height: 100vh;
+    width: 100%;
+    background-color: #e3e3e3;
+
 }
 .content__wrapper {
+    width: 100%;
+    height: 100%;
+    position: relative;
 }
+/*? *****Language************/
 .content__language__block {
+    position: absolute;
+    background-color: red;
+    width: 10%;
+    height: 20%;
+    top: 0;
+    right: 0;
+    z-index: 4;
 }
+/*? *****main content************/
 .main__content__block {
+    position: absolute;
+    z-index: 3;
+    width: 100%;
 }
+/*? *****footer content************/
 .footer__social__block {
+    position: absolute;
+    bottom: 0;
+    left: 10%;
+    height: 100px;
+    background-color: blue;
+    width: 320px;
+    z-index: 4;
 }
 .footer__social__wrapper {
 }
 .footer__social__img {
 }
-/**************768 px version********************/
+/****||*******768 version*****\\\\\\\\*********/
+/****||*******768 version*****\\\\\\\\*********/
+/****||*******768 version*****\\\\\\\\*********/
+/****||*******768 version*****\\\\\\\\*********/
