--- a/style/style.css
+++ b/style/style.css
@@ -137,9 +137,21 @@ h6 {
     height: 700px;
     width: 700px;
     position: relative;
-    background-color: red;
+
     bottom: 0;
     left: calc(50% - 350px);
+    z-index: 3;
+}
+.green__circle__block{
+    z-index: 2;
+    top: 0;
+    position: absolute;
+    width: 50px;
+    height: 50px;
+    border: 5px green solid;
+    border-radius: 50%;
+    left: calc(50% - 25px);
+    top: calc(0% - 25px);
 }
 .main__content__circle{
 
@@ -165,8 +177,8 @@ h6 {
     width: 30px;
     height: 30px;
     position: absolute;
-    top: -17px;
-    left: calc(50% - 20px);
+    top: -19px;
+    left: calc(50% - 15px);
 }
 .circle__sub__block2{
     background-color: #000;
