--- a/style/style.css
+++ b/style/style.css
@@ -130,7 +130,7 @@ h6 {
     height: 700px;
     width: 700px;
     position: absolute; 
-    bottom: 0;
+    bottom: -50%;
     left: calc(50% - 350px);
 }
 .main__content__circle__block{
@@ -148,7 +148,7 @@ h6 {
     position: absolute;
     width: 50px;
     height: 50px;
-    border: 5px green solid;
+    border: 5px rgba(101, 187, 153, 1) solid;
     border-radius: 50%;
     left: calc(50% - 25px);
     top: calc(0% - 25px);
@@ -161,8 +161,8 @@ h6 {
     border-radius: 50%;
 
     left: calc(50% - 350px);
-    border: 5px solid #000;
-    transition: ease-in 0.2s;
+    border: 5px solid rgba(14, 27, 71, 1);
+    transition: ease-in 0.3s;
 
 }
 .main__content__circle__wrapper{
@@ -170,9 +170,10 @@ h6 {
     height: 100%;
     position: relative;
     border-radius: 50%;
+    transition: ease-in 0.3s;
 }
 .circle__sub__block1{
-    background-color: #000;
+    background-color: rgba(14, 27, 71, 1);
     border-radius: 50%;    
     width: 30px;
     height: 30px;
@@ -181,52 +182,56 @@ h6 {
     left: calc(50% - 15px);
 }
 .circle__sub__block2{
-    background-color: #000;
+    background-color: rgba(14, 27, 71, 1);
     border-radius: 50%;    
     width: 30px;
     height: 30px;
     position: absolute;
-    top: calc(44%);
-    right: -17px;
+    top: calc(47.8%);
+    right: -19px;
 }
 .circle__sub__block3{
-    background-color: #000;
+    background-color: rgba(14, 27, 71, 1);
     border-radius: 50%;    
     width: 30px;
     height: 30px;
     position: absolute;
-    top: calc(44%);
-    left: -17px;
+    top: calc(47.8%);
+    left: -19px;
 }
 .circle__sub__block4{
-    background-color: #000;
+    background-color: rgba(14, 27, 71, 1);
     border-radius: 50%;    
     width: 30px;
     height: 30px;
     position: absolute;
-    top: 11%;
-    left: 13%;
+    top: 12%;
+    left: 12%;
 }
 .circle__sub__block5{
-    background-color: #000;
+    background-color: rgba(14, 27, 71, 1);
     border-radius: 50%;    
     width: 30px;
     height: 30px;
     position: absolute;
-    top: 11%;
-    left: 82%;
+    top: 83px;
+    left: 83.6%;
 }
 /*? *****footer content************/
 .footer__social__block {
     position: absolute;
     bottom: 0;
     left: 10%;
-    height: 100px;
-    background-color: rgb(121, 121, 185);
-    width: 320px;
+    height: 90px;
+    width: 280px;
     z-index: 4;
 }
 .footer__social__wrapper {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    height: 100%;
+    align-items: center;
 }
 .footer__social__img {
 }
