--- a/style/style.css
+++ b/style/style.css
@@ -112,8 +112,8 @@ h6 {
 .content__language__block {
     position: absolute;
     background-color: rgb(255, 255, 255);
-    width: 10%;
-    height: 20%;
+    width: 226px;
+    height: 226px;
     top: 0;
     right: 0;
     z-index: 4;
