--- a/style/style.css
+++ b/style/style.css
@@ -111,12 +111,21 @@ h6 {
 /*? *****Language************/
 .content__language__block {
     position: absolute;
-    background-color: rgb(255, 255, 255);
+    
     width: 226px;
     height: 226px;
     top: 0;
     right: 0;
     z-index: 4;
+}
+.language__circle__block{
+    background-color: rgba(14, 27, 71, 1);
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    position: absolute;
+    top: -60px;
+    right: -60px;
 }
 /*? *****main content************/
 .main__content__block {
@@ -162,7 +171,7 @@ h6 {
 
     left: calc(50% - 350px);
     border: 5px solid rgba(14, 27, 71, 1);
-    transition: ease-in 0.3s;
+    transition: ease-in 5s;
 
 }
 .main__content__circle__wrapper{
@@ -170,8 +179,23 @@ h6 {
     height: 100%;
     position: relative;
     border-radius: 50%;
-    transition: ease-in 0.3s;
+    transition: ease-in 5s;
+    animation: move 5s infinite linear;
 }
+@keyframes move {
+    0% {
+      transform: rotate(0deg);
+
+    }
+    50% {
+      transform: rotate(180deg);
+
+    }
+    100% {
+      transform: rotate(360deg);
+
+    }
+  }
 .circle__sub__block1{
     background-color: rgba(14, 27, 71, 1);
     border-radius: 50%;    
