--- a/style/style.css
+++ b/style/style.css
@@ -119,7 +119,7 @@ h6 {
     z-index: 4;
 }
 .language__circle__block{
-    background-color: rgba(14, 27, 71, 1);
+    border: 4px solid rgba(14, 27, 71, 1);
     width: 100%;
     height: 100%;
     border-radius: 50%;
