--- a/style/style.css
+++ b/style/style.css
@@ -293,7 +293,28 @@ h6 {
     position: absolute;
     width: 100%;
     height: 100%;
-    
+
+}
+/*? *****MAIN navigation block************/
+.main__navigation__block {
+    position: absolute;
+    width: 200px;
+    height: 50px;
+    right: 5%;
+    bottom: 5%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.main__navigation__down {
+}
+.main__number {
+}
+.main__number__img {
+}
+.main__number__p {
+}
+.main__navigation__up {
 }
 /*? *****footer content************/
 .footer__social__block {
