--- a/style/style.css
+++ b/style/style.css
@@ -180,7 +180,7 @@ h6 {
     z-index: 3;
     width: 100%;
     height: 100%;
-
+    background-color: #e3e3e3;
 }
 .circle__wrapper{
     height: 700px;
@@ -194,7 +194,7 @@ h6 {
     width: 700px;
     position: relative;
 
-    bottom: -65%;
+    bottom: -70%;
     left: calc(50% - 350px);
     z-index: 3;
 }
@@ -355,6 +355,12 @@ h6 {
     display: flex;
     align-items: center;
     justify-content: center;
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 5px 0px, rgba(0, 0, 0, 0.1) 0px 0px 1px 0px;
+    transition: ease-in-out 0.2s;
+}
+.slider__client__element:hover{
+    background-color: rgba(255, 255, 255, 0.788);
+    color: rgba(14, 27, 71, 1);
 }
 /*? *****MAIN navigation block************/
 .main__navigation__block {
