--- a/style/style.css
+++ b/style/style.css
@@ -364,7 +364,17 @@ h6 {
 }
 /*************3rd slide content*****************/
 .slider__content__wrapper_3{
-
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.slider__content__cities{
+    width: 85%;
+    margin: 0 auto;
+    background-color: #e3e3e3;
+    height: 90%;
 }
 .container{
     width: 90%;
